implement position mapping

--- a/SummerReport/SummerReport.csproj
+++ b/SummerReport/SummerReport.csproj
@@ -48,6 +48,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Camera\CameraControllerBase.cs" />
+    <Compile Include="Camera\ICameraController.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -60,7 +62,9 @@
     <Compile Include="Form2.Designer.cs">
       <DependentUpon>Form2.cs</DependentUpon>
     </Compile>
+    <Compile Include="IMatrixBinder.cs" />
     <Compile Include="Program.cs" />
+    <Compile Include="Projection\IProjectionController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
